# well-named-in-cpp-manojsubrahmanian

./: CMakeLists.txt  ColorCodingFormatter.cpp  ColorCodingFormatter.h  ColorPair.cpp  ColorPair.h  ColorPairConverter.cpp  ColorPairConverter.h  ColorUtils.cpp  ColorUtils.h  main.cpp  test_color_coding_formatter.cpp  test_color_pair.cpp  test_color_pair_converter.cpp.cpp
.github/workflows/: main-workflow.yml
